<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/u0"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="12px"
            android:id="@+id/linear_fragentone"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:weightSum="3"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="80px"
                >
                <Button
                    android:id="@+id/btu_fone_send"
                    android:layout_width="160px"
                    android:layout_height="60px"
                    android:layout_centerInParent="true"
                    android:textSize="24px"
                    android:background="@drawable/frgmentone_bws_button"
                    android:text="@string/helpsend"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="80px"
                >
                <Button
                    android:id="@+id/btu_fone_buy"
                    android:layout_width="160px"
                    android:layout_height="60px"
                    android:layout_centerInParent="true"
                    android:textSize="24px"
                    android:background="@drawable/frgmentone_bws_button"
                    android:text="@string/helpbuy"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="80px"
                >
                <Button
                    android:id="@+id/btu_fone_help"
                    android:layout_width="160px"
                    android:layout_height="60px"
                    android:layout_centerInParent="true"
                    android:textSize="24px"
                    android:background="@drawable/frgmentone_bws_button"
                    android:text="@string/help"/>
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_below="@+id/linear_fragentone"
            android:id="@+id/relative_layout_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_marginLeft="10px"
                android:layout_marginBottom="20px"
                android:layout_marginRight="10px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/u4"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rela_furenwu"
                android:layout_marginTop="12px"
                android:layout_width="match_parent"
                android:layout_height="90px">
                <TextView

                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50px"
                    android:text="@string/starttask"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_below="@+id/rela_furenwu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginTop="5px"
                    android:layout_marginLeft="75px"
                    android:layout_marginRight="20px"
                    android:layout_width="600px"
                    android:layout_height="140px"
                    android:background="@mipmap/u12">

                    <ImageView
                        android:layout_marginLeft="20px"
                        android:layout_marginTop="20px"
                        android:layout_width="100px"
                        android:layout_height="100px"
                        android:src="@mipmap/u18"/>
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginTop="20px"
                        android:layout_width="400px"
                        android:layout_height="100px">
                        <TextView
                            android:id="@+id/fgone_start_adress"
                            android:layout_marginLeft="10px"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/startadress"/>

                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_fone_start"
                        android:layout_marginTop="60px"
                        android:layout_marginLeft="20px"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=">>"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="12px"
                    android:layout_marginLeft="75px"
                    android:layout_marginRight="20px"
                    android:layout_width="600px"
                    android:layout_height="140px"
                    android:background="@mipmap/u12">

                    <ImageView
                        android:layout_marginLeft="20px"
                        android:layout_marginTop="20px"
                        android:layout_width="100px"
                        android:layout_height="100px"
                        android:src="@mipmap/u18"/>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginTop="20px"
                        android:layout_width="400px"
                        android:layout_height="100px">
                        <TextView
                            android:id="@+id/fgone_end_adress"
                            android:layout_marginLeft="10px"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/endadress"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_fone_end"
                        android:layout_marginTop="60px"
                        android:layout_marginLeft="20px"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=">>"/>

                </LinearLayout>

                <TextView
                    android:layout_marginTop="12px"
                    android:layout_marginLeft="300px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jinzhi"/>

                <LinearLayout
                    android:layout_marginTop="12px"
                    android:layout_marginLeft="50px"
                    android:layout_marginRight="10px"
                    android:layout_width="640px"
                    android:layout_height="140px"
                    android:background="@mipmap/u2">

                    <ImageView
                        android:layout_marginLeft="20px"
                        android:layout_marginTop="15px"
                        android:layout_width="100px"
                        android:layout_height="100px"
                        android:src="@mipmap/u18"/>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginTop="20px"
                        android:layout_width="350px"
                        android:layout_height="100px">
                        <TextView
                            android:id="@+id/fgone_quike_adress"
                            android:layout_marginLeft="10px"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"/>

                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_fone_quike"
                        android:layout_marginTop="60px"
                        android:layout_marginLeft="10px"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quike"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="3px"
                    android:layout_marginLeft="75px"
                    android:layout_marginRight="20px"
                    android:layout_width="match_parent"
                    android:layout_height="130px">

                    <ImageView
                        android:layout_marginLeft="20px"
                        android:layout_marginTop="20px"
                        android:layout_width="100px"
                        android:layout_height="100px"
                        android:src="@mipmap/u18"/>

                    <TextView
                        android:layout_marginTop="60px"
                        android:layout_marginLeft="10px"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fuwu"/>


                </LinearLayout>
                <Button
                    android:id="@+id/btu_fone_task"
                    android:layout_marginTop="25px"
                    android:layout_marginLeft="96px"
                    android:layout_width="560px"
                    android:layout_height="70px"
                    android:text="@string/task"
                    android:textColor="#ffffff"
                    android:background="@mipmap/u34"/>
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>


    <!--<FrameLayout-->
        <!--android:layout_below="@+id/linear_fragentone"-->
        <!--android:id="@+id/frgmentone_fl"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
    <!--</FrameLayout>-->

</RelativeLayout>
